--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,2 @@
 [build]
-  functions = "funçoes"  # Substitua "functions" pelo nome do seu diretório de funções
+  functions = "funcoes"  # Substitua "functions" pelo nome do seu diretório de funções
